--- a/api/Pipfile
+++ b/api/Pipfile
@@ -6,8 +6,17 @@ name = "pypi"
 [packages]
 flask = "*"
 flask-cors = "*"
+gunicorn = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-cov = "*"
 
 [requires]
 python_version = "3.9"
+
+[scripts]
+dev = "bash -c \"export FLASK_ENV='development' && flask run\""
+start = "gunicorn app:app"
+test = "pytest ."
+coverage = "pytest --cov-report term-missing --cov=."
